# selona

./: .gitignore  CLAUDE.md  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  l10n.yaml  lefthook.yml  pubspec.yaml
android/app/: build.gradle
docs/: architecture.md  specification.md  ui-design.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  routes.dart  theme.dart
lib/core/constants/: app_constants.dart  storage_paths.dart
lib/core/database/: database_manager.dart  folder_repository.dart  media_file_repository.dart
lib/core/errors/: exceptions.dart
lib/core/ffi/: frb_generated.dart  frb_generated.io.dart
lib/core/ffi.disabled/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/core/services/: crypto_service.dart  import_service.dart  panic_service.dart  temp_file_manager.dart  thumbnail_service.dart
lib/core/utils/: file_utils.dart
lib/l10n/: app_en.arb  app_ja.arb
lib/shared/models/: app_settings.dart  bookmark.dart  folder.dart  media_file.dart  playlist.dart  view_history.dart
lib/shared/utils/: orientation_helper.dart  responsive_grid.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: crypto.rs  mod.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
(+22 files in other folders)
