[package]
name = "selona_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "2.6"
# pink-072 = "0.1"  # TODO: Add when available

# For now, using standard crypto for placeholder implementation
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
