[package]
name = "selona_rust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
pink072 = "1.1"

# For PIN/passphrase hashing
sha2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
